tests/errors/first_stage/operation/index_oor/index_oor.as
; constant index was out of range
mystring: .string "Hello, world!"
.define length = 13
prn #length
cmp mystring[0], mystring[14]